# MCMCIS

./: .gitignore  README.md  mcmcis.py  mh_utils.py  pyproject.toml  requirements.txt  run_simulations.ipynb  samc.py  variance_estimation.py
jasa_mcmcis/: README.md  pyproject.toml
jasa_mcmcis/examples/: run_scenario.py
jasa_mcmcis/src/jasa_mcmcis/: __init__.py  beta.py  diagnostics.py  exact.py  mcmcis.py  problem.py  proposals.py  samc.py  scenarios.py  statistics.py
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/: catalog.json
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_n100/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v01_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v02_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v03_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v04_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v05_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v06_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v07_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/src/jasa_mcmcis/data/scenarios/gwas_additive_score_above_v08_n120/: X.npy  metadata.json  y_obs.npy
jasa_mcmcis/tests/: test_api.py
(+707 files in other folders)
